# Formula2Video

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
agents/: __init__.py  manim_agent.py  manim_fix_agent.py  orchestrator.py  script_agent.py  tts_agent.py
config/: prompt_template.py
models/: script_model.py
prompts/: manim_fix_prompt.txt  manim_prompt.txt  script_prompt.txt  system_prompt.txt  tts_prompt.txt  user_prompt.txt
scenes/: __init__.py  a2b2c2.py  ab2a22abb2.py  ax2bxc0.py  axb0.py  formulascene.py  mathbfqabmathbficmathbfjdmathbfk.py  mathbfqq0q1iq2jq3k.py  mathbfqwxmathbfiymathbfjzmathbfkquadtextquadmathbfqwmathbfvwxyz.py  mathbfqwxmathbfiymathbfjzmathbfkwmathbfvquadtextwxyzinmathbbrmathbfvxyz.py  qabicjdk.py  qabmathbficmathbfjdmathbfk.py  qabmathbficmathbfjdmathbfkabcdinmathbbrmathbfi2mathbfj2mathbfk2mathbfimathbfjmathbfk1.py  qabmathbficmathbfjdmathbfkquadabcdinmathbbr.py  qwxmathbfiymathbfjzmathbfkquadmathbfi2mathbfj2mathbfk2mathbfimathbfjmathbfk1.py  qwxmathbfiymathbfjzmathbfkquadwxyzinmathbbrmathbfi2mathbfj2mathbfk2mathbfimathbfjmathbfk1.py
tools/: __init__.py  manim_executor.py  tts_generator.py  video_ending_appender.py  video_merger.py  video_splitter.py
utils/: ai_code_generator.py  code_validator.py  file_utils.py  formula_parser.py  grade_converter.py  logger.py  path_manager.py  validation.py
