[project]
name = "formula2video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "manim>=0.19.1",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "mutagen>=1.47.0",
    "langchain>=1.2.1",
    "langchain-openai>=1.1.6",
    "moviepy>=1.0.3",
    "aiofiles>=24.1.0",
]
